# TFM-Labos

./: .gitignore  README.md  config.yml  images.yml  pyproject.toml
images/client/: behavior.sh  docker-compose.yml  entrypoint.sh  restartImage.sh
images/client/docker/: Dockerfile  docker-compose.yml
images/dns/: docker-compose.yml
images/parrot/parrot_files/: hello.sh
images/web_server/: docker-compose.yml
images/web_server/server/: main.py
src/: .env  Conductor.py  Inq_Questions.py  Terminal_manager.py  Yalm_handler.py  docker-compose.yml  main.py  mkdocs.yml
src/containers/client/: Dockerfile
src/containers/client/behavior/: entrypoint.sh
src/containers/dns/config/: dnsmasq.conf
src/containers/evil_web_server/: Dockerfile
src/containers/evil_web_server/server/: main.py
src/containers/kali_attacker/: Dockerfile
src/containers/kali_attacker/captures/: traffic_20250705_174130.pcap
src/containers/kali_attacker/scripts/: arp_spoof.sh  dns_spoof.sh  lab1_menu.sh  (+4 more)
src/containers/requester/: Dockerfile
src/containers/web_server/: Dockerfile
src/docs/: docker.md  index.md  lab1.md  test-interactive.md
src/docs/javascripts/: extra.js  mermaid.js
src/docs/stylesheets/: animations.css  cards.css  extra.css  interactive.css  interactivity.js
src/images/client/: Dockerfile  docker-compose.yml
src/images/evil_web_server/: docker-compose.yml
src/images/kali/: docker-compose.yml
src/images/parrot/: docker-compose.yml
src/images/web_server/: Dockerfile  docker-compose.yml
src/util/: connect_kali  connect_parrot  init_portainer.sh
(+4 files in other folders)
